--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "5.8.*",
+        "maddhatter/laravel-fullcalendar": "^1.3",
         "spatie/laravel-permission": "^3.16"
     },
     "require-dev": {
