--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "botman/botman": "^2.6",
+        "botman/driver-web": "^1.5",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "5.8.*",
         "maddhatter/laravel-fullcalendar": "^1.3",
         "spatie/laravel-permission": "^3.16"
+       
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
