--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,14 @@
         "botman/botman": "^2.6",
         "botman/driver-web": "^1.5",
         "fideloper/proxy": "^4.0",
+        "hwi/oauth-bundle": "^1.2",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "5.8.*",
         "maddhatter/laravel-fullcalendar": "^1.3",
+        "php-http/guzzle6-adapter": "^2.0",
+        "php-http/httplug-bundle": "^1.19",
         "spatie/laravel-permission": "^3.16"
-       
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
