--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "botman/botman": "^2.6",
         "botman/driver-web": "^1.5",
+        "darryldecode/cart": "~4.0",
         "fideloper/proxy": "^4.0",
         "hwi/oauth-bundle": "^1.2",
         "laravel/framework": "5.8.*",
@@ -18,8 +19,7 @@
         "laravelcollective/html": "5.8.*",
         "maddhatter/laravel-fullcalendar": "^1.3",
         "php-http/guzzle6-adapter": "^2.0",
-        "php-http/httplug-bundle": "^1.19",
-        "spatie/laravel-permission": "^3.16"
+        "php-http/httplug-bundle": "^1.19"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
